feat: merge crd into cluster type
