# api/models/controller_info.go
@@ -1,56 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// ControllerInfo controller info
-//
-// swagger:model Controller_info
-type ControllerInfo struct {
-
-	// controller replicas
-	Replicas int32 `json:"replicas,omitempty"`
-
-	// controller storage size
-	StorageSize string `json:"storage_size,omitempty"`
-
-	// controller version
-	Version string `json:"version,omitempty"`
-}
-
-// Validate validates this controller info
-func (m *ControllerInfo) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this controller info based on context it is used
-func (m *ControllerInfo) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ControllerInfo) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ControllerInfo) UnmarshalBinary(b []byte) error {
-	var res ControllerInfo
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
